* fhandler.cc (fhandler_base::write): In the lseek_bug case, set EOF 	before zero filling. Combine similar error handling statements.

--- a/winsup/cygwin/ChangeLog
+++ b/winsup/cygwin/ChangeLog
@@ -1,5 +1,10 @@
 2004-08-28  Pierre Humblet <pierre.humblet@ieee.org>
 
+	* fhandler.cc (fhandler_base::write): In the lseek_bug case, set EOF 
+	before zero filling. Combine similar error handling statements.
+
+2004-08-28  Pierre Humblet <pierre.humblet@ieee.org>
+
 	* syscalls.cc (ftruncate64): On 9x, call write with a zero length
 	to zero fill when the file is extended.
 
