--- a/winsup/cygwin/ChangeLog
+++ b/winsup/cygwin/ChangeLog
@@ -1,3 +1,8 @@
+2004-08-29  Corinna Vinschen  <corinna@vinschen.de>
+
+	* fhandler_disk_file.cc (fhandler_disk_file::fchmod): Allow to report
+	success on systems with ntsec and ntea set.
+
 2004-08-28  Pierre Humblet <pierre.humblet@ieee.org>
 
 	* fhandler.cc (fhandler_base::write): In the lseek_bug case, set EOF 
