--- a/winsup/cygwin/ChangeLog
+++ b/winsup/cygwin/ChangeLog
@@ -1,3 +1,9 @@
+2004-08-30  Christopher Faylor  <cgf@timesys.com>
+
+	* fork.cc (fork_parent): Record child's pid when we're sure that it has
+	been filled out by the child.
+	* pinfo.cc (pinfo::init): Trivial change.
+
 2004-08-29  Corinna Vinschen  <corinna@vinschen.de>
 
 	* fhandler_disk_file.cc (fhandler_disk_file::fchmod): Allow to report
