--- a/winsup/cygwin/ChangeLog
+++ b/winsup/cygwin/ChangeLog
@@ -1,3 +1,7 @@
+2004-09-03  Corinna Vinschen  <corinna@vinschen.de>
+
+	* security.cc: Fix a few more strace_prints.
+
 2004-09-02  Christopher Faylor  <cgf@timesys.com>
 
 	Regularize most strace_prints throughout so that %E is always preceded
