* include/_mingw.h: Increment minor version for 3.5 release. 	* Makefile.in: Ditto.

--- a/winsup/mingw/ChangeLog
+++ b/winsup/mingw/ChangeLog
@@ -1,3 +1,8 @@
+2004-09-05  Earnie Boyd  <earnie@users.sf.net>
+
+	* include/_mingw.h: Increment minor version for 3.5 release.
+	* Makefile.in: Ditto.
+
 2004-08-24  Danny Smith  <dannysmith@users.sourceforge.net>
 
 	* include/malloc.h (__mingw_aligned_offset_malloc,
