--- a/winsup/cygwin/ChangeLog
+++ b/winsup/cygwin/ChangeLog
@@ -1,3 +1,7 @@
+2004-09-05  Christopher Faylor  <cgf@timesys.com>
+
+	* include/cygwin/version.h: Bump DLL minor number to 12.
+
 2004-09-03  Corinna Vinschen  <corinna@vinschen.de>
 
 	* security.cc: Fix a few more strace_prints.
