--- a/gdb/ChangeLog
+++ b/gdb/ChangeLog
@@ -1,3 +1,10 @@
+2004-09-07  Jim Blandy  <jimb@redhat.com>
+
+	* rs6000-tdep.c: #include "dwarf2-frame.h".
+	(rs6000_dwarf2_reg_to_regnum): Recognize 65 as another number for lr.
+	(rs6000_gdbarch_init): Hook in dwarf2_frame_sniffer.
+	* Makefile.in (rs6000-tdep.o): Update dependencies.
+
 2004-09-01  Jim Blandy  <jimb@redhat.com>
 
 	Allow access to all 64 bits of the SPE GPR's in multi-threaded
