--- a/winsup/mingw/ChangeLog
+++ b/winsup/mingw/ChangeLog
@@ -1,7 +1,16 @@
 2004-09-08  Earnie Boyd  <earnie@users.sf.net>
 
+	* include/sys/stat.h (_S_IFLNK): Add definition.
+	(S_IFLNK) Ditto.
+	(_lstat) Ditto.
+	(lstat) Ditto.
+	(_S_ISLNK) Recode.
+	(S_ISLNK) Ditto.
+
+2004-09-08  Earnie Boyd  <earnie@users.sf.net>
+
 	* include/sys/stat.h (_S_ISLNK): Add definition.
-	(S_ISLNG): Ditto.
+	(S_ISLNK): Ditto.
 
 2004-09-05  Earnie Boyd  <earnie@users.sf.net>
 
