--- a/winsup/cygwin/ChangeLog
+++ b/winsup/cygwin/ChangeLog
@@ -1,3 +1,8 @@
+2004-09-09  Bas van Gompel  <cygwin-patch.buzz@bavag.tmfweb.nl>
+
+	* pipe.cc (create_selectable_pipe): Work around bug in Windows 95
+	where CreateNamedPipe returns NULL.
+
 2004-09-08  Pierre Humblet <pierre.humblet@ieee.org>
 
 	* cygheap.h (cwdstuff::drive_length): New member.
