--- a/winsup/cygwin/ChangeLog
+++ b/winsup/cygwin/ChangeLog
@@ -1,3 +1,7 @@
+2004-09-12  Christopher Faylor  <cgf@timesys.com>
+
+	* child_info.h (CURR_CHILD_INFO_MAGIC): Update.
+
 2004-09-11  Pierre Humblet  <pierre.humblet@ieee.org>
 	    Christopher Faylor  <cgf@timesys.com>
 
