--- a/rda/unix/ChangeLog
+++ b/rda/unix/ChangeLog
@@ -1,3 +1,8 @@
+2004-09-13  Jim Blandy  <jimb@theseus.home>
+
+	* solaris-target.c (solaris_detach, solaris_attach): Change
+	"linux" to "solaris".
+
 2004-08-11  Corinna Vinschen  <vinschen@redhat.com>
 
 	* linux-target.c (linux_write_reg): Print process->pid in case of
