--- a/winsup/doc/what.texinfo
+++ b/winsup/doc/what.texinfo
@@ -49,7 +49,7 @@ Yes.  Parts are GNU software (gcc, gas, ld, etc...), parts are covered
 by the standard X11 license, some of it is public domain, some of
 it was written by Cygnus and placed under the GPL.  None of it is
 shareware.  You don't have to pay anyone to use it but you should be
-sure to read the copyright section of the FAQ more more information on
+sure to read the copyright section of the FAQ for more information on
 how the GNU General Public License may affect your use of these tools.
 
 In particular, if you intend to port a proprietary (non-GPL'd)
@@ -72,7 +72,7 @@ To find the version of the Cygwin DLL installed, you can use
 @samp{--help} output and the @uref{http://cygwin.com/cygwin-ug-net/,
 Cygwin User's Guide} for more information.
 
-If you are looking for the a version number for the whole Cygwin
+If you are looking for the version number for the whole Cygwin
 release, there is none. Each package in the Cygwin release has its own
 version.  The packages in Cygwin are continually improving, thanks to
 the efforts of net volunteers who maintain the Cygwin binary ports.
