* HOWTO: Fix typos.

--- a/rda/ChangeLog
+++ b/rda/ChangeLog
@@ -1,3 +1,7 @@
+2004-09-14  Jim Blandy  <jimb@theseus.home>
+
+	* HOWTO: Fix typos.
+
 2004-07-23  Michael Snyder  <msnyder@redhat.com>
 
 	* MAINTAINERS: Remove Andrew Cagney, at his request.
