2004-09-15  Jeff Johnston  <jjohnstn@redhat.com>
        * configure.host: Reverting 2004-09-14 change as fix has occurred on
        Cygwin side.
        * configure.in: Ditto.
        * libc/configure.in: Ditto.
        * libc/sys/configure.in: Ditto.
        * configure: Ditto.
        * libc/configure: Ditto.
        * libc/sys/configure: Ditto.
        * libc/include/sys/reent.h: Ditto.
        * libc/stdlib/__atexit.c: Ditto.
        * libc/stdlib/__call_atexit.c: Ditto.
        * libc/stdlib/cxa_atexit.c: Ditto.
        * libc/stdlib/cxa_finalize.c: Ditto.
        * libc/sys/cygwin/Makefile.am: Removed again.
        * libc/sys/cygwin/Makefile.in: Ditto.
        * libc/sys/cygwin/aclocal.m4: Ditto.
        * libc/sys/cygwin/configure: Ditto.
        * libc/sys/cygwin/configure.in: Ditto.
        * libc/sys/cygwin/dummy.c: Ditto.
        * libc/sys/cygwin/sys/reent.h: Ditto.

--- a/newlib/ChangeLog
+++ b/newlib/ChangeLog
@@ -1,3 +1,26 @@
+2004-09-15  Jeff Johnston  <jjohnstn@redhat.com>
+
+	* configure.host: Reverting 2004-09-14 change as fix has occurred on
+	Cygwin side.
+	* configure.in: Ditto.
+	* libc/configure.in: Ditto.
+	* libc/sys/configure.in: Ditto.
+	* configure: Ditto.
+	* libc/configure: Ditto.
+	* libc/sys/configure: Ditto.
+	* libc/include/sys/reent.h: Ditto.
+	* libc/stdlib/__atexit.c: Ditto.
+	* libc/stdlib/__call_atexit.c: Ditto.
+	* libc/stdlib/cxa_atexit.c: Ditto.
+	* libc/stdlib/cxa_finalize.c: Ditto.
+	* libc/sys/cygwin/Makefile.am: Removed again.
+	* libc/sys/cygwin/Makefile.in: Ditto.
+	* libc/sys/cygwin/aclocal.m4: Ditto.
+	* libc/sys/cygwin/configure: Ditto.
+	* libc/sys/cygwin/configure.in: Ditto.
+	* libc/sys/cygwin/dummy.c: Ditto.
+	* libc/sys/cygwin/sys/reent.h: Ditto.
+
 2004-09-14  Jeff Johnston  <jjohnstn@redhat.com>
 
 	* configure.host: Add Cygwin sys directory.
