--- a/newlib/libc/ctype/ctype.tex
+++ b/newlib/libc/ctype/ctype.tex
@@ -23,6 +23,7 @@ The header file @file{ctype.h} defines the macros.
 * toupper::   Translate characters to upper case
 * iswalnum::  Alphanumeric wide-character predicate
 * iswalpha::  Alphabetic wide-character predicate
+* iswblank::  Blank wide-character predicate
 * iswcntrl::  Control wide-character predicate
 * iswdigit::  Decimal digit wide-character predicate
 * iswgraph::  Graphic wide-character predicate
@@ -90,6 +91,9 @@ The header file @file{ctype.h} defines the macros.
 
 @page
 @include ctype/iswcntrl.def
+
+@page
+@include ctype/iswblank.def
 
 @page
 @include ctype/iswdigit.def
