--- a/newlib/libc/stdio/stdio.tex
+++ b/newlib/libc/stdio/stdio.tex
@@ -26,12 +26,14 @@ structure.
 @menu  
 * clearerr::    Clear file or stream error indicator
 * fclose::      Close a file
+* fcloseall::   Close all files
 * feof::        Test for end of file
 * ferror::      Test whether read/write error has occurred
 * fflush::      Flush buffered file output
 * fgetc::       Get a character from a file or stream
 * fgetpos::     Record position in a stream or file
 * fgets::       Get character string from a file or stream
+* fileno::      Get file descriptor associated with stream
 * fiprintf::    Write formatted output to file (integer only)
 * fopen::       Open a file
 * fdopen::	Turn an open file into a stream
@@ -44,20 +46,28 @@ structure.
 * ftell::       Return position in a stream or file
 * fwrite::      Write array elements from memory to a file or stream
 * getc::        Get a character from a file or stream (macro)
+* getc_unlocked::	Get a character from a file or stream (macro)
 * getchar::     Get a character from standard input (macro)
+* getchar_unlocked::	Get a character from standard input (macro)
+* getdelim::    Get character string from a file or stream
+* getline::     Get character string from a file or stream
 * gets::        Get character string from standard input (obsolete)
 * getw::        Get a word (int) from a file or stream
 * iprintf::     Write formatted output (integer only)
 * mktemp::      Generate unused file name
 * perror::      Print an error message on standard error
 * putc::        Write a character on a stream or file (macro)
+* putc_unlocked::	Write a character on a stream or file (macro)
 * putchar::     Write a character on standard output (macro)
+* putchar_unlocked::	Write a character on standard output (macro)
 * puts::        Write a character string on standard output
 * putw::        Write a word (int) to a file or stream
 * remove::      Delete a file's name
 * rename::      Rename a file
 * rewind::      Reinitialize a file or stream
 * setbuf::      Specify full buffering for a file or stream
+* setbuffer::   Specify full buffering for a file or stream with size
+* setlinebuf::  Specify line buffering for a file or stream
 * setvbuf::     Specify buffering for a file or stream
 * siprintf::    Write formatted output (integer only)
 * printf::      Write formatted output
@@ -65,6 +75,7 @@ structure.
 * tmpfile::     Create a temporary file
 * tmpnam::      Generate name for a temporary file
 * vprintf::     Format variable argument list
+* vscanf::      Format variable argument list
 @end menu 
 
 @page
@@ -72,6 +83,9 @@ structure.
 
 @page
 @include stdio/fclose.def
+
+@page
+@include stdio/fcloseall.def
 
 @page
 @include stdio/feof.def
@@ -90,6 +104,9 @@ structure.
 
 @page 
 @include stdio/fgets.def 
+
+@page
+@include stdio/fileno.def
 
 @page
 @include stdio/fiprintf.def
@@ -128,7 +145,19 @@ structure.
 @include stdio/getc.def 
 
 @page
+@include stdio/getc_u.def
+
+@page
 @include stdio/getchar.def 
+
+@page
+@include stdio/getchar_u.def
+
+@page
+@include stdio/getdelim.def
+
+@page
+@include stdio/getline.def
 
 @page 
 @include stdio/gets.def
@@ -149,7 +178,13 @@ structure.
 @include stdio/putc.def
 
 @page
+@include stdio/putc_u.def
+
+@page
 @include stdio/putchar.def
+
+@page
+@include stdio/putchar_u.def
 
 @page
 @include stdio/puts.def
@@ -168,6 +203,12 @@ structure.
 
 @page
 @include stdio/setbuf.def
+
+@page
+@include stdio/setbuffer.def
+
+@page
+@include stdio/setlinebuf.def
 
 @page
 @include stdio/setvbuf.def
@@ -190,3 +231,5 @@ structure.
 @page 
 @include stdio/vfprintf.def 
 
+@page
+@include stdio/vfscanf.def
