--- a/newlib/libc/stdlib/stdlib.tex
+++ b/newlib/libc/stdlib/stdlib.tex
@@ -5,6 +5,8 @@ This chapter groups utility functions useful in a variety of programs.
 The corresponding declarations are in the header file @file{stdlib.h}.
 
 @menu 
+* _Exit::       End program execution without cleaning up
+* a64l::        String to long long
 * abort::       Abnormal termination of a program
 * abs::         Integer absolute value (magnitude)
 * assert::      Macro for Debugging Diagnostics
@@ -30,15 +32,24 @@ The corresponding declarations are in the header file @file{stdlib.h}.
 * mbstowcs::	Minimal multibyte string to wide string converter
 * mblen::	Minimal multibyte length
 * mbtowc::      Minimal multibyte to wide character converter
+* on_exit::     Request execution of functions at program exit
 * rand::        Pseudo-random numbers
 * rand48::      Uniformly distributed pseudo-random numbers
 * strtod::      String to double or float
 * strtol::      String to long
+* strtoll::     String to long long
 * strtoul::     String to unsigned long
+* strtoull::    String to unsigned long long
 * system::      Execute command string
 * wcstombs::	Minimal wide string to multibyte string converter
 * wctomb::      Minimal wide character to multibyte converter
 @end menu
+
+@page
+@include stdlib/_Exit.def
+
+@page
+@include stdlib/a64l.def
 
 @page
 @include stdlib/abort.def
@@ -113,6 +124,9 @@ The corresponding declarations are in the header file @file{stdlib.h}.
 @include stdlib/mbtowc.def
 
 @page
+@include stdlib/on_exit.def
+
+@page
 @include stdlib/rand.def
 
 @page
@@ -125,7 +139,13 @@ The corresponding declarations are in the header file @file{stdlib.h}.
 @include stdlib/strtol.def
 
 @page
+@include stdlib/strtoll.def
+
+@page
 @include stdlib/strtoul.def
+
+@page
+@include stdlib/strtoull.def
 
 @page
 @include stdlib/system.def
