--- a/newlib/libc/time/time.tex
+++ b/newlib/libc/time/time.tex
@@ -56,6 +56,7 @@ not in effect, negative means no information about DST is available.
 * mktime::      Convert time to arithmetic representation
 * strftime::    Flexible calendar time formatter
 * time::        Get current calendar time (as single number)
+* __tz_lock::   Lock time zone global variables
 * tzset::       Set timezone info
 @end menu
 
@@ -85,6 +86,9 @@ not in effect, negative means no information about DST is available.
 
 @page
 @include time/time.def
+
+@page
+@include time/tzlock.def
 
 @page
 @include time/tzset.def
